--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ premium pour votre futur investissement locatif à Marseille " name="description
                 <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
               </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Réserver un appel stratégique </a></div>
+              <div class="text-center"><a href="https://calendly.com/teramata/30min" class="buy-btn">Réserver un appel stratégique </a></div>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -517,7 +517,7 @@ premium pour votre futur investissement locatif à Marseille " name="description
                 <li><i class="bi bi-check"></i> Pharetra massa massa ultricies</li>
                 <li><i class="bi bi-check"></i> Massa ultricies mi quis hendrerit</li>
               </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Réserver un appel stratégique </a></div>
+              <div class="text-center"><a href="https://calendly.com/teramata/30min" class="buy-btn">Réserver un appel stratégique </a></div>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -535,7 +535,7 @@ premium pour votre futur investissement locatif à Marseille " name="description
                 <li><i class="bi bi-check"></i> Pharetra massa massa ultricies</li>
                 <li><i class="bi bi-check"></i> Massa ultricies mi quis hendrerit</li>
               </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Réserver un appel stratégique </a></div>
+              <div class="text-center"><a href="https://calendly.com/teramata/30min" class="buy-btn">Réserver un appel stratégique </a></div>
             </div>
           </div><!-- End Pricing Item -->
 
